--- a/Task1/Task1.html
+++ b/Task1/Task1.html
@@ -9,13 +9,11 @@
 </head>
 
 <body>
-    <div class="flex-container">
+    <div class="flex-container-main">
+    <div class="flex-container-1">
     <div class="flex-item personal_data">
-    <style>
-        h1 {color:rgb(0,255,0);}
-    </style>
-    <h1 style="color: red;">Клевцов</h1>
-    <h1 style="color: red;">Яросвет</h1>
+    <h1>Клевцов</h1>
+    <h1>Яросвет</h1>
     <h1>Александрович</h1>
     <img src="Nature.jpg" width="300" height="200">
     <h3>Пол</h3>
@@ -29,6 +27,8 @@
     <input type="text" id="age" name="age" size="10">
     <span> &raquo; </span><a href="https://vk.com/yarokl"> Мой ВК </a>
     </div>
+    </div>
+    <div class="flex-container-2">
     <div class="flex-item student_data">
     <h3>Номер Группы</h3>
     <input type="text" id="group_number" name="group_number" size="10">
@@ -61,6 +61,7 @@
         <li> Компьютерные Игры </li>
         <li> Настольные Игры </li>
     </ul>
+    </div>
     </div>
     </div>
 </body>
