--- a/Task1/Task1.html
+++ b/Task1/Task1.html
@@ -10,59 +10,64 @@
 
 <body>
     <div class="flex-container-main">
-    <div class="flex-container-1">
-    <div class="flex-item personal_data">
-    <h1>Клевцов</h1>
-    <h1>Яросвет</h1>
-    <h1>Александрович</h1>
-    <img src="Nature.jpg" width="300" height="200">
-    <h3>Пол</h3>
-    <select name="gender" id="1">
-        <option value="1">М</option>
-        <option value="2">Ж</option>
-        <option value="3">Другое</option>
-        <option value="4">Не указано</option>
-    </select>
-    <h3>Возраст</h3>
-    <input type="text" id="age" name="age" size="10">
-    <span> &raquo; </span><a href="https://vk.com/yarokl"> Мой ВК </a>
-    </div>
-    </div>
-    <div class="flex-container-2">
-    <div class="flex-item student_data">
-    <h3>Номер Группы</h3>
-    <input type="text" id="group_number" name="group_number" size="10">
-    <a href="http://saudubna.ru/component/content/article/5-ivt/77-rivs"> Кафедра распределенных информационно- вычислительных систем </a>
-    <h4> Результаты Зимней сессии </h4>
-    <table>
-        <tr><th> Дисциплина </th><th> Форма контроля </th><th> Оценка </th></tr>
-        <tr><td> САОД </td><td> ЗаО </td><td> 3 </td></tr>
-        <tr><td> Философия </td><td> ЗаО </td><td> 3 </td></tr>
-        <tr><td> БД </td><td> Экз </td><td> 4 </td></tr>
-        <tr><td> ФизКультура </td><td> За </td><td> Зачет </td></tr>
-        <tr><td> ОЭЭСУ </td><td> Экз </td><td> 4 </td></tr>
-        <tr><td> КД </td><td> ЗаО </td><td> 3 </td></tr>
-        <tr><td> АнЯз </td><td> За </td><td> Зачет </td></tr>
-        <tr><td> МС </td><td> ЗаО </td><td> 4 </td></tr>
-    </table>
-    </div>
-    <div class="flex-item skill_data">
-    <h3> Навыки и Умения </h3>
-    <ul>
-        <li> Навыки написания программ на C++ </li>
-        <li> Навыки написания программ на C# </li>
-        <li> Сборка компьютеров </li>
-        <li> Умение работать в Excel </li>
-    </ul>
-    <h3> Увлечения </h3>
-    <ul>
-        <li> Программирование </li>
-        <li> Музыка </li>
-        <li> Компьютерные Игры </li>
-        <li> Настольные Игры </li>
-    </ul>
-    </div>
-    </div>
+        <div class="flex-container-submain">
+            <div class="flex-container-1">
+                <div class="flex-item personal_data">
+                    <h1>Клевцов</h1>
+                    <h1>Яросвет</h1>
+                    <h1>Александрович</h1>
+                    <img src="Nature.jpg" width="300" height="200">
+                    <h3>Пол</h3>
+                    <select name="gender" id="1">
+                        <option value="1">М</option>
+                        <option value="2">Ж</option>
+                        <option value="3">Другое</option>
+                        <option value="4">Не указано</option>
+                    </select>
+                    <h3>Возраст</h3>
+                    <input type="text" id="age" name="age" size="10">
+                    <span> &raquo; </span><a href="https://vk.com/yarokl"> Мой ВК </a>
+                </div>
+            </div>
+            <div class="flex-container-2">
+                <div class="flex-item student_data">
+                    <h3>Номер Группы</h3>
+                    <input type="text" id="group_number" name="group_number" size="10">
+                    <a href="http://saudubna.ru/component/content/article/5-ivt/77-rivs"> Кафедра распределенных информационно- вычислительных систем </a>
+                    <h4> Результаты Зимней сессии </h4>
+                    <table>
+                        <tr><th> Дисциплина </th><th> Форма контроля </th><th> Оценка </th></tr>
+                        <tr><td> САОД </td><td> ЗаО </td><td> 3 </td></tr>
+                        <tr><td> Философия </td><td> ЗаО </td><td> 3 </td></tr>
+                        <tr><td> БД </td><td> Экз </td><td> 4 </td></tr>
+                        <tr><td> ФизКультура </td><td> За </td><td> Зачет </td></tr>
+                        <tr><td> ОЭЭСУ </td><td> Экз </td><td> 4 </td></tr>
+                        <tr><td> КД </td><td> ЗаО </td><td> 3 </td></tr>
+                        <tr><td> АнЯз </td><td> За </td><td> Зачет </td></tr>
+                        <tr><td> МС </td><td> ЗаО </td><td> 4 </td></tr>
+                    </table>
+                </div>
+                <div class="flex-item skill_data">
+                    <h3> Навыки и Умения </h3>
+                    <ul>
+                        <li> Навыки написания программ на C++ </li>
+                        <li> Навыки написания программ на C# </li>
+                        <li> Сборка компьютеров </li>
+                        <li> Умение работать в Excel </li>
+                    </ul>
+                    <h3> Увлечения </h3>
+                    <ul>
+                        <li> Программирование </li>
+                        <li> Музыка </li>
+                        <li> Компьютерные Игры </li>
+                        <li> Настольные Игры </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="flex-container-Test">
+        
+        </div>
     </div>
 </body>
 
