--- a/Task1/Task1.html
+++ b/Task1/Task1.html
@@ -66,7 +66,95 @@
             </div>
         </div>
         <div class="flex-container-Test">
-        
+            <div class="flex-item flex-Item-Right">
+                <h3>Предмет для сдачи</h3>
+                <select name="discipline" id="1">
+                    <option value="1">ПТИ</option>
+                    <option value="2">ПИС</option>
+                    <option value="3">ОИБ</option>
+                    <option value="4">НП</option>
+                    <option value="5">СТ</option>
+                    <option value="6">ТАФЯ</option>
+                    <option value="7">АнЯз</option>
+                </select>
+                <h3>Преподаватель</h3>
+                <input type="text" id="teacher" name="teacher" size="10">
+                <h3>День сдачи</h3>
+                <select name="month" id="1">
+                    <option value="1">Январь</option>
+                    <option value="2">Февраль</option>
+                    <option value="3">Март</option>
+                    <option value="4">Апрель</option>
+                    <option value="5">Май</option>
+                    <option value="6">Июнь</option>
+                    <option value="7">Июль</option>
+                    <option value="8">Август</option>
+                    <option value="9">Сентябрь</option>
+                    <option value="10">Октябрь</option>
+                    <option value="11">Ноябрь</option>
+                    <option value="12">Декабрь</option>
+                </select>
+                <select name="day" id="1">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                    <option value="22">22</option>
+                    <option value="23">23</option>
+                    <option value="24">24</option>
+                    <option value="25">25</option>
+                    <option value="26">26</option>
+                    <option value="27">27</option>
+                    <option value="28">28</option>
+                    <option value="29">29</option>
+                    <option value="30">30</option>
+                    <option value="31">31</option>
+                </select>
+                <h3>Время</h3>
+                <input type="text" id="time" name="time" size="10">
+                
+            </div>
+            <div class="flex-item flex-Item-Left">
+                <h3>Клевцов</h3>
+                <h3>Яросвет</h3>
+                <h3>Александрович</h3>
+                <h3>Курс</h3>
+                <select name="course" id="1">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+                <h3>Факультет</h3>
+                <select name="department" id="1">
+                    <option value="1">ИСАУ</option>
+                    <option value="2">ФЕИН</option>
+                    <option value="3">ИФИ</option>
+                    <option value="4">ФСГН</option>
+                </select>
+                <h3>Группа</h3>
+                <input type="text" id="group_number" name="group_number" size="10">
+                <h3>Форма сдачи</h3>
+                <p><input type="radio" name="form1" value="full-time">Очная</p>
+                <p><input type="radio" name="form2" value="distant">Дистанционная</p>
+            </div>
         </div>
     </div>
 </body>
