--- a/Task1/Task1.html
+++ b/Task1/Task1.html
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="flex-container-Test">
-            <div class="flex-item flex-Item-Right">
+            <form>
                 <h3>Предмет для сдачи</h3>
                 <select name="discipline" id="1">
                     <option value="1">ПТИ</option>
@@ -130,8 +130,8 @@
                 <h3>Время</h3>
                 <input type="text" id="time" name="time" size="10">
                 
-            </div>
-            <div class="flex-item flex-Item-Left">
+            </form>
+            <form>
                 <h3>Клевцов</h3>
                 <h3>Яросвет</h3>
                 <h3>Александрович</h3>
@@ -154,7 +154,7 @@
                 <h3>Форма сдачи</h3>
                 <p><input type="radio" name="form1" value="full-time">Очная</p>
                 <p><input type="radio" name="form2" value="distant">Дистанционная</p>
-            </div>
+            </form>
         </div>
     </div>
 </body>
