--- a/Task1/Task1.html
+++ b/Task1/Task1.html
@@ -26,6 +26,7 @@
                     </select>
                     <h3>Возраст</h3>
                     <input type="text" id="age" name="age" size="10">
+                    <h3></h3>
                     <span> &raquo; </span><a href="https://vk.com/yarokl"> Мой ВК </a>
                 </div>
             </div>
@@ -75,8 +76,8 @@
             </div>
         </div>
         <div class="flex-container-Test">
-            <form class="flex-item flex-Item-Right">
-                <fieldset id="right">
+            <form class="flex-item flex-Item-Left">
+                <fieldset id="left" style="height: 275px; border: dashed;">
                     <p><label for="discipline">Предмет для сдачи</label>
                         <select name="discipline" id="1">
                         <option value="1">ПТИ</option>
@@ -95,8 +96,8 @@
                     <input type="time" id="time">
                 </fieldset>
             </form>
-            <form class="flex-item flex-Item-Left">
-                <fieldset id="left">
+            <form class="flex-item flex-Item-Right">
+                <fieldset id="right" style="height: 275px; border: dashed;">
                     <p><label for="surname">Клевцов</label></p>
                     <p><label for="name">Яросвет</label></p>
                     <p><label for="midle_name">Александрович</label></p>
