--- a/Task4/Task4.html
+++ b/Task4/Task4.html
@@ -25,5 +25,7 @@
         </fieldset>
     </form>
     <button onclick="changeColor();">Сменить цвет фона</button>
+    <button onclick="changeDarkTheme();">Темная тема</button>
+    <button onclick="changeBrightTheme();">Светлая тема</button>
 </body>
 </html>
