--- a/Task5/Task5.html
+++ b/Task5/Task5.html
@@ -12,6 +12,7 @@
         <div class="circle red" color="red"></div>
         <div class="circle" color="yellow"></div>
         <div class="circle" color="green"></div>
+        <div class="circle" color="white"></div>
     </div>
     <script src="Task5.js"></script>
 </body>
